# yahboom_rosmaster

./: .gitignore  .mcp.json  README.md
.claude/: CLAUDE.md  context.md
mecanum_drive_controller/: CMakeLists.txt
mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller.hpp
mecanum_drive_controller/src/: mecanum_drive_controller.cpp  odometry.cpp
mecanum_drive_controller/test/: test_load_mecanum_drive_controller.cpp
yahboom_rosmaster_bringup/: CMakeLists.txt  package.xml
yahboom_rosmaster_bringup/launch/: load_ros2_controllers.launch.py  rosmaster_x3_navigation.launch.py
yahboom_rosmaster_bringup/scripts/: rosmaster_x3_gazebo.sh  rosmaster_x3_gazebo_headless.sh  rosmaster_x3_navigation.sh
yahboom_rosmaster_description/: CMakeLists.txt  package.xml
yahboom_rosmaster_description/launch/: robot_state_publisher.launch.py
yahboom_rosmaster_description/urdf/control/: rosmaster_x3_ros2_control.urdf.xacro
yahboom_rosmaster_description/urdf/mech/: mecanum_wheel.urdf.xacro
yahboom_rosmaster_description/urdf/robots/: rosmaster_x3.urdf.xacro
yahboom_rosmaster_description/urdf/sensors/: imu.urdf.xacro  lidar.urdf.xacro  rgbd_camera.urdf.xacro
yahboom_rosmaster_docking/: CMakeLists.txt  package.xml
yahboom_rosmaster_docking/config/: apriltags_36h11.yaml
yahboom_rosmaster_docking/launch/: apriltag_dock_pose_publisher.launch.py
yahboom_rosmaster_docking/src/: detected_dock_pose_publisher.cpp
yahboom_rosmaster_gazebo/: CMakeLists.txt  package.xml
yahboom_rosmaster_gazebo/config/: motion_profiles.yaml  ros2_control.yaml  ros_gz_bridge.yaml
yahboom_rosmaster_gazebo/doc/: fortress_simulator_branch_analysis.md  motion_profiles.md  native_mecanum_drive_implementation.md
yahboom_rosmaster_gazebo/launch/: rosmaster_gazebo_fortress.launch.py
yahboom_rosmaster_gazebo/rviz/: gazebo.rviz
yahboom_rosmaster_gazebo/scripts/: base_feedback_probe.py  cmd_vel_watchdog.py  depth_geometry_probe.py  ground_truth_contract_probe.py  imu_motion_probe.py  lidar_geometry_probe.py  mecanum_velocity_control.py  motion_profile_divergence_probe.py  sensor_contract_probe.py  twist_to_stamped.py  wheel_odometry_resilience_probe.py  wheel_state_odometry.py
yahboom_rosmaster_gazebo/test/: base_feedback.launch.py  depth_geometry.launch.py  ground_truth_contract.launch.py  imu_motion.launch.py  lidar_geometry.launch.py  motion_profile_contract_test.py  motion_profile_divergence.launch.py  sensor_contract.launch.py  wheel_odometry_resilience.launch.py
yahboom_rosmaster_gazebo/worlds/: cafe.world  empty.world
yahboom_rosmaster_localization/: CMakeLists.txt  package.xml
yahboom_rosmaster_localization/config/: ekf.yaml
yahboom_rosmaster_localization/launch/: ekf_gazebo.launch.py
yahboom_rosmaster_navigation/: CMakeLists.txt  package.xml
yahboom_rosmaster_navigation/config/: rosmaster_x3_nav2_default_params.yaml
yahboom_rosmaster_navigation/scripts/: assisted_teleoperation.py  nav_to_pose.py  test_nav_to_pose.py
yahboom_rosmaster_system_tests/: CMakeLists.txt  package.xml
yahboom_rosmaster_system_tests/launch/: mecanum_parameters.launch.py
yahboom_rosmaster_system_tests/src/: mecanum_parameters_node.cpp  set_cleaning_state_service.cpp  square_mecanum_controller.cpp  timed_rotation_action_client.cpp  timed_rotation_action_server.cpp
